--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
@@ -31,6 +32,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "start": "http-server -a localhost -p 3001"
+  }
 }
